testsuite/tests/type-data/should_fail/TDDeriving.hs
{-# LANGUAGE TypeData #-}
module TDDeriving where

type data Nat = Zero | Succ Nat
    deriving (Eq)
